Fixed header paddings on Firefox.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,6 @@
 .header{
     color: #fff;
-    padding: 2.5% 0%;
+    padding: 2.5% 0px;
     font-size: 2em;
     background-color: rgba( 0, 0, 0, .4);
 }
@@ -20,7 +20,7 @@
 }
 
 .navbar .item{
-    padding: 1% 2%;
+    padding: 8px 2%;
     font-size: .7em;
     text-align: center;
     text-transform: uppercase;
@@ -36,7 +36,7 @@
 
 @media screen and (max-width: 768px) {
     .header{
-        padding: 8% 0%;
+        padding: 16px 0px;
         font-size: 1em;
     }
 
@@ -47,7 +47,7 @@
 
 @media screen and (min-width: 1280px) {
     .header{
-        padding: 2% 0%;
+        padding: 2% 0px;
         font-size: 2.5em;
     }
 
